--- a/src/barChart.css
+++ b/src/barChart.css
@@ -2,12 +2,13 @@
     position: absolute;
     z-index: 999;
     right: 150px;
-    bottom: 600px;
+    bottom: 500px;
     padding:20px 10px;
     box-shadow: 0 0 5px 0 rgba(184, 140, 140, 0.3);
     font-size:12px;
     letter-spacing:2px;
-    background: rgba(0,0,0,0.8);
+    background: rgba(228, 217, 217, 0.8);
     border-radius:5px;
     width: 16%;
+    height: 225px;
   }
