--- a/src/barChart.css
+++ b/src/barChart.css
@@ -2,7 +2,7 @@
     position: absolute;
     z-index: 999;
     right: 150px;
-    bottom: 500px;
+    top: 40px;
     padding:20px 10px;
     box-shadow: 0 0 5px 0 rgba(184, 140, 140, 0.3);
     font-size:12px;
@@ -11,4 +11,5 @@
     border-radius:5px;
     width: 16%;
     height: 225px;
+    border: 2px solid black;
   }
